--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,4 @@
 # define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
-APP_SECRET='$ecretf0rt3st'
-SYMFONY_DEPRECATIONS_HELPER=999999
-PANTHER_APP_ENV=panther
+APP_ENV=dev
+APP_SECRET=d88ff994ea454824c1aa15795677faf8
+DATABASE_URL=mysql://user:password@127.0.0.1:3306/database_name
